# geobrix

./: .cursorrules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SCALA_STYLE.md  pom.xml
.cursor/: session-start-reminder.md
.cursor/agents/: coverage.md  data.md  docker.md  docs.md  function-info.md  gdal.md  gridx.md  rasterx.md  test.md  vectorx.md
.cursor/commands/: common.sh  gbx-ci-docs.md  gbx-ci-docs.sh  gbx-ci-logs.md  gbx-ci-logs.sh  gbx-ci-push.md  gbx-ci-push.sh  gbx-ci-setup.md  gbx-ci-setup.sh  gbx-ci-status.md  gbx-ci-status.sh  gbx-ci-trigger.md  gbx-ci-trigger.sh  gbx-ci-watch.md  gbx-ci-watch.sh  gbx-coverage-baseline.md  gbx-coverage-baseline.sh  gbx-coverage-gaps.md  gbx-coverage-gaps.sh  gbx-coverage-python-docs.md  gbx-coverage-python-docs.sh  gbx-coverage-python.md  gbx-coverage-python.sh  gbx-coverage-scala-docs.md  gbx-coverage-scala-docs.sh  gbx-coverage-scala-package.md  gbx-coverage-scala-package.sh  gbx-coverage-scala.md  gbx-coverage-scala.sh  gbx-data-download.md  gbx-data-download.sh  gbx-data-generate-minimal-bundle.md  gbx-data-generate-minimal-bundle.sh  gbx-data-push-jar.md  gbx-data-push-jar.sh  gbx-data-push-wheel.md  gbx-data-push-wheel.sh  gbx-docker-attach.md  gbx-docker-attach.sh  gbx-docker-clear-pycache.md  (+55 more)
.cursor/rules/: 00-agent-context.mdc  Required-behavior.mdc  coverage-strategy.mdc  cross-language-naming-consistency.mdc  cursor-commands.mdc  doc-example-output-alignment.mdc  doc-test-iteration-strategy.mdc  docs-test-single-source.mdc  documentation-code-validation.mdc  documentation-payload-pattern.mdc  documentation-test-validation.mdc  execution-workflow.mdc  function-documentation-standards.mdc  function-info.mdc  gdal-resource-management.mdc  gridx-bng-api.mdc  library-integration-doc-examples.mdc  maven-configuration.mdc  notebook-tests-behavior.mdc  override-documentation.mdc  progress-updates.mdc  python-test-dependencies.mdc  reader-naming-convention.mdc  scala-documentation-pattern.mdc  subagent-protocol.mdc  summary-files-organization.mdc  test-organization-logging.mdc  unity-catalog-volumes.mdc
.cursor/skills/add-or-fix-gbx-command/: SKILL.md
.cursor/skills/create-cursor-rule/: SKILL.md
.github/: CODECOV.md  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/actions/python_build/: action.yml
.github/actions/scala_build/: action.yml
.github/actions/upload_artifacts/: action.yml
.github/docs/: ci-runner-and-cache.md  scala-coverage-parallel-design.md
.github/workflows/: build_main.yml  build_python.yml  build_scala.yml  build_scala_by_package.yml  codecov-scala-parallel.yml  codecov-upload.yml  codeql-analysis.yml  deploy-docs.yml  doc-tests.yml  publish-maven.yml  release.yml
beta-dist/: README.md
docs/: .gitignore  DOCS-BUILD-GUIDE.md  README.md  doc-snippet-inventory.json  docusaurus.config.js  package-lock.json  package.json  scala-style-guide.md  sidebars.js
docs/docs/: beta-release-notes.mdx  databricks-spatial.mdx  developers.mdx  installation.md  installation.mdx  intro.md  intro.mdx  limitations.md  limitations.mdx  quick-start.md  quick-start.mdx  support.md  support.mdx
docs/docs/advanced/: custom-udfs.mdx  gdal-cli.mdx  library-integration.mdx  overview.mdx
docs/docs/api/: gridx-functions.md  gridx-functions.mdx  overview.md  overview.mdx  python.md  python.mdx  rasterx-functions.md  rasterx-functions.mdx  scala.md  scala.mdx  sql.md  sql.mdx  tile-structure.mdx  vectorx-functions.md  vectorx-functions.mdx
docs/docs/examples/: overview.md  overview.mdx
docs/docs/readers/: filegdb.md  filegdb.mdx  gdal.md  gdal.mdx  (+11 more)
docs/scripts/: convert_md_to_mdx.py  generate-function-info.py  relativize-static-build.js  remove-expression-info-overrides.py  verify-static-docs.mjs
docs/static/: site.webmanifest
docs/tests/: README.md  pytest.ini
docs/tests-dbr/: README.md  pytest.ini
docs/tests-function-info/: README.md  __init__.py  conftest.py  helpers.py  pytest.ini  registered_functions.txt  run_describe_gbx_rst_summary.py  test_describe_gridx.py  test_describe_rasterx.py  test_describe_vectorx.py  test_function_info_coverage.py
notebooks/sample-data/: setup_sample_data.ipynb
notebooks/tests/: =26.0.0  =8.8.0  README.md  conftest.py  databricks_cluster_config.example.env  push_and_run_bundle_on_cluster.py  push_and_run_primitive_on_cluster.py  push_jar_to_volume.py  push_wheel_to_volume.py  pytest.ini  requirements.txt  run_notebooks_cell_by_cell.py  test_bundle_on_databricks.py  test_notebook_via_script.py  test_workdir_path_rewrite.py
python/geobrix/: pyproject.toml
python/geobrix/src/databricks/labs/gbx/gridx/bng/: functions.py
python/geobrix/src/databricks/labs/gbx/rasterx/: functions.py
python/geobrix/src/databricks/labs/gbx/sample/: __init__.py  _bundle.py
python/geobrix/src/databricks/labs/gbx/vectorx/jts/legacy/: functions.py
python/geobrix/test/: README.md
python/geobrix/test/gridx/: test_bng_functions.py  test_bng_operations.py  test_bng_registration.py
python/geobrix/test/rasterx/: test_rasterx_accessors.py  test_rasterx_generators.py  test_rasterx_operations.py  test_rasterx_registration.py  test_rasterx_tile_structure.py
python/geobrix/test/sample/: test_sample_bundle.py
python/geobrix/test/vectorx/: test_legacy_registration.py
resources/beta-dist/: README.md
sample-data/: README.md  convert_to_zipped_shapefiles.py  create-sample-filegdb.py  create-sample-geopackage.py  download-complete-bundle.py  download-essential-bundle.py  generate-minimal-bundle.py  test-nyc-session.py
scripts/: geobrix-gdal-init.sh
scripts/ci/: QUICKSTART.md  README.md  authenticate-gh.sh  check-ci-status.sh  ci-manager.sh  fetch-ci-logs.sh  inventory-doc-snippets.py  merge_scoverage.py  push-and-watch.sh  run-doc-tests.sh  setup-gh-cli.sh  trigger-remote-tests.sh  watch-ci.sh
scripts/docker/: Dockerfile  README-DOCKER.md  build.sh  build_smart.sh  connect_to_docker.sh  entrypoint.sh  start_docker.sh  start_docker_with_volumes.sh
scripts/util/: install_hadoop.sh  run_test.sh  set_modis_crs.sh  test_profiler.sh
src/test/: 0README.md
(+432 files in other folders)
