[project]
name = "geobrix"
authors = [
    { name = "Michael Johns" },
    { name = "Stuart Lynn" },
    { email = "labs@databricks.com"}
]
dynamic = ["version"]
description = "GeoBriX: A high-performance spatial processing library for Apache Spark."
readme = "README.md"
requires-python = ">=3.10, <3.13"

license = { text = "Databricks License" }
classifiers = [
    "License :: Other/Proprietary License",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    'Operating System :: OS Independent'
]
dependencies = [
    "pyspark>=4.0.0",
]

[project.urls]
Homepage = "https://databricks.com/learn/labs"
Repository = "https://github.com/databrickslabs/geobrix"
Documentation = "https://databrickslabs.github.io/geobrix/"

[project.optional-dependencies]
dev = [
    "isort",
    "black",
    "flake8",
    "flake8-pyproject",
    "build",
]
test = [
    "pytest>=7.0",
    "shapely>=2.0.0",
    "rasterio>=1.3.0",
    "numpy>=1.24.0",
]
# For sample-data bundle uploads to Unity Catalog Volumes and gbx:test:bundle-databricks
databricks = [
    "databricks-sdk",
]

[tool.coverage.run]
# Exclude sample-data bundle from coverage total so reported % reflects main library (gridx, rasterx, vectorx)
# Multiple patterns ensure exclusion when paths are relative (src/...) or absolute; required for CI and local.
omit = [
    "*sample/_bundle.py",
    "*_bundle.py",
    "src/databricks/labs/gbx/sample/_bundle.py",
    "databricks/labs/gbx/sample/_bundle.py",
    "python/geobrix/src/databricks/labs/gbx/sample/_bundle.py",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.pytest.ini_options]
pythonpath = [ "src" ]
markers = [
    "integration: tests that need network or long-running setup (excluded from CI)",
]
filterwarnings = [
    "ignore:Support for class-based .* config.* deprecated:",
    "ignore:Neither gdal.UseExceptions:FutureWarning",
]

[build-system]
requires = ["setuptools>=61.2", "wheel"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
geobrix = ["lib/*.jar", "resources/*.png"]

[tool.setuptools.dynamic]
version = {attr = "databricks.labs.gbx.__version__"}

[tool.black]
line-length = 88
target-version = ["py310", "py312"]
include = '\.pyi?$'
extend-exclude = '/(\.git|__pycache__|dist)/'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = ["databricks"]
default_section = "THIRDPARTY"

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503"]
max-line-length = 88
max-complexity = 20
select = ["B", "C", "E", "F", "W", "T4"]
exclude = [".git", "__pycache__", "docs/conf.py", "dist"]
